--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^6.7.0",
+    "ioredis": "^5.3.1",
     "joi": "^17.8.4",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "rate-limit-redis": "^2.0.0",
+    "rate-limiter-flexible": "^2.4.1",
+    "redis": "^3.1.2"
   }
 }
