Implementing authentication middleware

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 PORT = 
 
-URL = mongodb://localhost:port/nom-de-votre-base-de-donnees
+DB_URL = mongodb://localhost:port/nom-de-votre-base-de-donnees
 
 ACCESS_TOKEN_SECRET= 
 REFRESH_TOKEN_SECRET= 
